# preface

./: .flake8  .gitignore  README.md  README.rst  __init__.py  dict.py  pyproject.toml  setup.cfg  tox.ini
docs/source/: api.rst  conf.py  index.rst  usage.rst
preface/: __init__.py  concurrency.py  dict.py
prelude/: __init__.py
requirements/: dev.txt
tests/: test_dict.py  test_preface.py  test_prelude.py
