[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "preface"
authors = [{name = "Samuel Stevens", email = "samuel.robert.stevens@gmail.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/samuelstevens/preface"

[tool.pytest.ini_options]
addopts = "--cov preface --cov-report html"

[tool.isort]
profile = "black"
